# docs/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  model.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   model.ServiceRequest:
     properties:
       checkIntervalSeconds:
@@ -17,6 +24,27 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/login:
+    post:
+      parameters:
+      - description: Login request body
+        in: body
+        name: loginRequest
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginRequest'
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "422":
+          description: Unprocessable Entity
+      summary: Login
   /v1/services:
     get:
       responses:
